removed preview features